# cuadernos_ingenieria

./: .gitignore  README.md  pyproject.toml
src/notebooks/: escaleras_sin_apoyo.ipynb
